docs/7.57/md/abenreference_glosry.md
---
title: "reference_glosry"
description: |
  reference_glosry - ABAP 7.57 language reference documentation
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenreference_glosry.htm"
abapFile: "abenreference_glosry.htm"
keywords: ["do", "if", "try", "class", "data", "internal-table", "abenreference", "glosry"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP Glossary](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_glossary.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: reference, ABENREFERENCE_GLOSRY, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggest
ion for improvement:)

reference

Content of [reference variables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenreference_variable_glosry.htm "Glossary Entry"). A valid reference refers to a [data object](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendata_object_glosry.htm "Glossary Entry") ([data reference](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendata_reference_glosry.htm "Glossary Entry")) or an [instance](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeninstance_glosry.htm "Glossary Entry") of a [class](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenclass_glosry.htm "Glossary Entry") ([object reference](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenobject_reference_glosry.htm "Glossary Entry")). References in reference variables are either [heap references](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenheap_reference_glosry.htm "Glossary Entry") or [stack references](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstack_reference_glosry.htm "Glossary Entry"). Internally, [strings](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_glosry.htm "Glossary Entry"), [internal tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeninternal_table_glosry.htm "Glossary Entry"), and [boxed components](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenboxed_component_glosry.htm "Glossary Entry") are also addressed via references. From a technical point of view, an object in ABAP is referenced in multiple layers. A reference is the address of an internal header (object header, string header, or table header), which contains the address of the actual object and other administrative information such as the [data type](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendata_type_glosry.htm "Glossary Entry") of a referenced data object.

[→ More about](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendata_references.htm)